# custom-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_demo.bat  run_demo.py  test_agents.py  test_embedding_models.py  test_llm_models.py
chroma_db/: chroma.sqlite3
config/: models.yaml
src/: config.py  rag_factory.py  rag_system.py
src/agents/: __init__.py  rag_agent.py
src/agents/interfaces/: __init__.py  agent_system_interface.py
src/api/: chat.py  documents.py  query.py  system.py  upload.py
src/config/: __init__.py  model_config.py
src/demo/: __init__.py  models.py  rag_system.py  vector_store.py
src/dependency_injection/: __init__.py  rag_factory.py
src/embedding/: __init__.py  chunking.py  langchain_models.py  langchain_vectorstore.py  models.py  vector_store.py
src/embedding/interfaces/: __init__.py  embedding_model_interface.py  vector_store_interface.py
src/llm/: __init__.py  callbacks.py  langchain_models.py  models.py
src/llm/interfaces/: __init__.py  llm_model_interface.py  llm_service_interface.py
src/ui/: chat_ui.py  upload_ui.py
src/ui/static/css/: style.css
src/ui/static/js/: chat.js  documents.js  upload-admin.js  upload.js
src/ui/templates/: chat.html  document_original_view.html  document_view.html  documents.html  error.html  upload.html
src/upload/: document_processor.py  file_service.py
src/upload/interfaces/: __init__.py  document_processor_interface.py
