[project]
name = "custom-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.15",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-text-splitters>=0.0.1",
    "langchain-openai>=0.0.5",
    "langchain-google-genai>=0.0.6",
    "tiktoken>=0.5.0",
    "python-magic>=0.4.27",
    "aiofiles>=23.2.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "jinja2>=3.1.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "openai>=1.3.0",
    "google-generativeai>=0.3.0"
]
