[project]
name = "custom-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "chromadb>=0.4.15",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "tiktoken>=0.5.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "jinja2>=3.1.2",
    "openai>=1.3.0",
    "google-generativeai>=0.3.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "scikit-learn>=1.3.0",
]
